# sd-utility

./: .gitignore  README.md  flake.nix  hie.yaml  package.yaml  sd-utility.cabal  stack.yaml
app/: Main.hs
src/SD/Utility/: AverageTrueRange.hs  Calendar.hs  Either.hs  Exception.hs  ExpMovingAverage.hs  IO.hs  MaxLengthSequence.hs  MinMaxSequence.hs  MovingAverage.hs  Percentile.hs  Random.hs  Read.hs  RelativeStrengthIndex.hs  Scientific.hs  Streaming.hs
test/: TestSuite.hs
test/Data/Serialize/: Tests.hs
test/Data/Store/: Tests.hs
test/SD/Utility/AverageTrueRange/: Tests.hs
test/SD/Utility/Calendar/: Tests.hs
test/SD/Utility/Exception/: Tests.hs
test/SD/Utility/ExpMovingAverage/: Tests.hs
test/SD/Utility/IO/: Tests.hs
test/SD/Utility/MaxLengthSequence/: Tests.hs
test/SD/Utility/MinMaxSequence/: Tests.hs
test/SD/Utility/MovingAverage/: Tests.hs
test/SD/Utility/Percentile/: Tests.hs
test/SD/Utility/Read/: Tests.hs
test/SD/Utility/RelativeStrengthIndex/: Tests.hs
test/SD/Utility/Scientific/: Tests.hs
test/SD/Utility/Streaming/: Tests.hs
