name:                sd-utility
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/shlok/sd-utility
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    ghc-options:         -Wall
    default-language:    Haskell2010
    default-extensions:  OverloadedStrings
    exposed-modules:     SD.Utility.Scientific
    build-depends:       base >= 4.7 && < 5
                       , scientific >= 0.3.4.15

source-repository head
    type:     git
    location: https://github.com/shlok/sd-utility
