name:                sd-utility
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/shlok/sd-utility
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    ghc-options:         -Wall
    default-language:    Haskell2010
    default-extensions:  OverloadedStrings
    exposed-modules:     SD.Utility.Scientific
                       , SD.Utility.IO
    build-depends:       base >= 4.7 && < 5
                       , scientific >= 0.3.4.15

test-suite sd-utility-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             TestSuite.hs
    other-modules:       SD.Utility.IO.Tests
    build-depends:       base >= 4.7 && < 5
                       , sd-utility
                       , tasty >= 0.11.2.1
                       , tasty-hunit >= 0.9.2
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010

source-repository head
    type:     git
    location: https://github.com/shlok/sd-utility
