cabal-version:  3.0
name:           sd-utility
version:        0.1.0.0
synopsis:       Initial project template from stack
description:    Please see README.md
category:       Web
homepage:       https://github.com/shlok/sd-utility#readme
bug-reports:    https://github.com/shlok/sd-utility/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2016 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/shlok/sd-utility

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , bytestring
    , cereal
    , containers
    , cpu
    , mtl
    , order-statistic-tree
    , random
    , scientific
    , store
    , streaming
    , streaming-bytestring
    , time
  exposed-modules:
      SD.Utility.AverageTrueRange
      SD.Utility.Calendar
      SD.Utility.Either
      SD.Utility.Exception
      SD.Utility.ExpMovingAverage
      SD.Utility.IO
      SD.Utility.MaxLengthSequence
      SD.Utility.MinMaxSequence
      SD.Utility.MovingAverage
      SD.Utility.Percentile
      SD.Utility.Random
      SD.Utility.Read
      SD.Utility.RelativeStrengthIndex
      SD.Utility.Scientific
      SD.Utility.Streaming
  other-modules:
      Paths_sd_utility
  default-language: Haskell2010

executable sd-utility
  main-is: Main.hs
  other-modules:
      Paths_sd_utility
  hs-source-dirs:
      app
  ghc-options: -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , cereal
    , containers
    , cpu
    , mtl
    , random
    , scientific
    , sd-utility
    , store
    , streaming
    , streaming-bytestring
    , time
  default-language: Haskell2010

test-suite sd-utility-test
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , bytestring
    , cereal
    , containers
    , cpu
    , mtl
    , random
    , scientific
    , sd-utility
    , store
    , streaming
    , streaming-bytestring
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , time
  other-modules:
      Data.Serialize.Tests
      Data.Store.Tests
      SD.Utility.AverageTrueRange.Tests
      SD.Utility.Calendar.Tests
      SD.Utility.Exception.Tests
      SD.Utility.ExpMovingAverage.Tests
      SD.Utility.IO.Tests
      SD.Utility.MaxLengthSequence.Tests
      SD.Utility.MinMaxSequence.Tests
      SD.Utility.MovingAverage.Tests
      SD.Utility.Percentile.Tests
      SD.Utility.Read.Tests
      SD.Utility.RelativeStrengthIndex.Tests
      SD.Utility.Scientific.Tests
      SD.Utility.Streaming.Tests
      Paths_sd_utility
  default-language: Haskell2010
